--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,50 @@
-name: CI
+﻿name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "**" ]
+    paths:
+      - "src/**"
+      - "tests/**"
+      - "scripts/**"
+      - "pyproject.toml"
+      - ".github/workflows/**"
   pull_request:
-    branches: [ main ]
+    branches: [ "**" ]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    name: py${{ matrix.python }} on ${{ matrix.os }}
+    timeout-minutes: 20
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        python: ["3.11"]
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
-      - name: Install
+          python-version: ${{ matrix.python }}
+          cache: "pip"
+
+      - name: Show Python
+        run: |
+          python -V
+          python -c "import sys,platform; print(sys.executable); print(platform.platform())"
+
+      - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install -e .
-          pip install pytest
-      - name: Tests
-        run: pytest -q
+          python -m pip install -e . pytest ruff
+
+      - name: Lint
+        run: ruff check src tests
+
+      - name: Run tests
+        run: python -m pytest -q
