docs(app): README run instructions; example spectrum CSV for Streamlit Single Spectrum tab

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
-[build-system]
+﻿[build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
@@ -26,3 +26,5 @@ where = ["src"]
 
 [tool.ruff]
 line-length = 100
+
+
