ci: ubuntu+windows, upload synthetic artifacts, Linux smoke run for Streamlit

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,49 +2,59 @@
 
 on:
   push:
-    branches: [ "**" ]
-    paths:
-      - "src/**"
-      - "tests/**"
-      - "scripts/**"
-      - "pyproject.toml"
-      - ".github/workflows/**"
+    branches: [ main, feat/** ]
   pull_request:
-    branches: [ "**" ]
+    branches: [ main ]
 
 jobs:
-  test:
-    name: py${{ matrix.python }} on ${{ matrix.os }}
-    timeout-minutes: 20
+  build:
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python: ["3.11"]
+        python-version: [3.11]
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python }}
-          cache: "pip"
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
 
-      - name: Show Python
-        run: |
-          python -V
-          python -c "import sys,platform; print(sys.executable); print(platform.platform())"
+    - name: Install deps
+      run: |
+        python -m pip install --upgrade pip
+        pip install -e .
+        pip install pytest streamlit plotly
 
-      - name: Install deps
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -e . pytest ruff
+    - name: Run tests
+      run: |
+        pytest -q
 
-      - name: Lint
-        run: ruff check src tests
+    - name: Generate synthetic examples
+      run: |
+        python - <<'PYCODE'
+        import pathlib
+        from scripts.gen_data import make_pregnancy, make_phantoms
+        import numpy as np, pandas as pd
+        out = pathlib.Path("docs/examples"); out.mkdir(parents=True, exist_ok=True)
+        make_pregnancy().to_csv(out/"pregnancy_ci.csv", index=False)
+        make_phantoms().to_csv(out/"phantoms_ci.csv", index=False)
+        E = np.linspace(0,3000,3001); y = np.random.poisson(5,size=E.size)
+        pd.DataFrame({"energy_keV":E,"counts":y}).to_csv(out/"spectrum_ci.csv", index=False)
+        PYCODE
 
-      - name: Run tests
-        run: python -m pytest -q
+    - name: Upload examples as artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: synthetic-examples
+        path: docs/examples/*.csv
+
+    - name: Streamlit smoke run (Linux only)
+      if: runner.os == 'Linux'
+      run: |
+        python -m streamlit run app/streamlit_app.py --server.headless true --server.port 8501 &
+        sleep 15
+        pkill -f "streamlit" || true
+      shell: bash
