build: clean pyproject (LF, UTF-8 no BOM), fix literal CRLF markers in tests; ignore E501; reinstall; lint+test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
-﻿[build-system]
+[build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
@@ -35,4 +35,7 @@ testpaths = ["tests"]
 
 [tool.ruff]
 line-length = 100
+
+[tool.ruff.lint]
 select = ["E","F","I"]
+ignore = ["E501"]
