--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+﻿name: CI
 
 on:
   push:
@@ -21,3 +21,4 @@ jobs:
           pip install pytest
       - name: Tests
         run: pytest -q
+
