Rewrite pyproject.toml without BOM to satisfy tomllib

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,18 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "wbkc-calibration-mc"
-version = "0.1.1"
-authors = [
-  { name="Kishor Bhat", email="kishorbhat@example.com" }
-]
+version = "0.1.2"
+authors = [{ name = "Kishor Bhat", email = "kishorbhat@example.com" }]
 description = "Monte Carlo based WBKC calibration models"
 readme = "README.md"
 requires-python = ">=3.9"
-dependencies = [
-  "numpy",
-  "scipy",
-  "pandas",
-]
+dependencies = ["numpy", "scipy", "pandas"]
 license = { file = "LICENSE" }
 
 [tool.setuptools.packages.find]
